# flintcli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
example_tests/: basic_placement.json
src/: bot.rs  executor.rs
